# serializer version: 1
# name: test_all_entities[climate.aircon_said1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'high',
        'medium',
        'low',
        'off',
      ]),
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30,
      'min_temp': 16,
      'swing_modes': list([
        'horizontal',
        'off',
      ]),
      'target_temp_step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aircon_said1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'said1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[climate.aircon_said1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 80,
      'current_temperature': 15,
      'fan_mode': 'auto',
      'fan_modes': list([
        'auto',
        'high',
        'medium',
        'low',
        'off',
      ]),
      'friendly_name': 'Aircon said1',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30,
      'min_temp': 16,
      'supported_features': <ClimateEntityFeature: 425>,
      'swing_mode': 'horizontal',
      'swing_modes': list([
        'horizontal',
        'off',
      ]),
      'target_temp_step': 1,
      'temperature': 20,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aircon_said1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_all_entities[climate.aircon_said2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'high',
        'medium',
        'low',
        'off',
      ]),
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30,
      'min_temp': 16,
      'swing_modes': list([
        'horizontal',
        'off',
      ]),
      'target_temp_step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aircon_said2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'said2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[climate.aircon_said2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 80,
      'current_temperature': 15,
      'fan_mode': 'auto',
      'fan_modes': list([
        'auto',
        'high',
        'medium',
        'low',
        'off',
      ]),
      'friendly_name': 'Aircon said2',
      'hvac_modes': list([
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30,
      'min_temp': 16,
      'supported_features': <ClimateEntityFeature: 425>,
      'swing_mode': 'horizontal',
      'swing_modes': list([
        'horizontal',
        'off',
      ]),
      'target_temp_step': 1,
      'temperature': 20,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aircon_said2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
